Detached and created a new endpoint for atividades
