# src/controllers/prestador.controllers.ts
@@ -7,6 +7,7 @@ import { retornarPrestadorService } from "../services/prestador/retornarPrestado
 import { actualizarPrestadorService } from "../services/prestador/actualizarPrestador";
 import { criarPrestadorService } from "../services/prestador/criarPrestador";
 import { removerCategoria } from "../services/prestador/removerCategoria";
+import retornarAtividadesService from "../services/prestador/retornarAtividades";
 
 export const criarPrestador = async (req: CustomRequest, res: Response) => {
   const prestador: Prestador = req.body;
@@ -118,5 +119,17 @@ export const removerCategoriaProvedor = async (
       message: "An error occured removing the selected category",
       success: false,
     });
+  }
+};
+
+export const retornarAtividades = async (req: CustomRequest, res: Response) => {
+  const response = await retornarAtividadesService(req.id);
+
+  if (response) {
+    res.status(200).json(response);
+  } else {
+    res
+      .status(400)
+      .json({ message: "An error occurred while getting the activities" });
   }
 };
